// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Provider Component re-renders when reactive data is changed 1`] = `
<div>
  <div><span class="test-span">new test message</span></div>
</div>
`;

exports[`The Provider Component works 1`] = `
<div>
  <div><span class="test-span">test message</span></div>
</div>
`;
